v3/TUTORIAL.md
# TUTORIAL.md

## Step-by-step Guide to Compile and Run the Project

### Prerequisites

Ensure the following tools are installed on your system:

- GCC (with OpenMP support)
- MPI (e.g., OpenMPI)
- CUDA Toolkit
- uthash library

### Setting Up the Environment

1. **Install GCC** (if not already installed):

   ```bash
   sudo apt-get install gcc
   ```

2. **Install MPI** (if not already installed):

   ```bash
   sudo apt-get install openmpi-bin openmpi-common libopenmpi-dev
   ```

3. **Install CUDA Toolkit** (if not already installed):
   Follow the instructions on the [NVIDIA CUDA Toolkit website](https://developer.nvidia.com/cuda-downloads) to download and install the appropriate version for your system.

4. **Verify OpenMP Support**:

   ```bash
   gcc -fopenmp --version
   ```

### Compiling the Project

The `Makefile` provided automates the build process and organizes the output. Here’s what each target does:

- **`make all`**: Compiles all necessary executables (parallel, sequential, and database generation).
- **`make db`**: Compiles and runs the database generation executable.
- **`make par`**: Compiles only the parallel version of the program.
- **`make seq`**: Compiles only the sequential version of the program.
- **`make clean`**: Cleans up all generated build and output files.

Run the following to build the entire project:

```bash
make all
```

This command will create the `par`, `seq`, and `db` executables in the `build` directory.

### Running the Program

To generate the database files:

```bash
make db
```

To run the parallelized program with MPI and CUDA:

```bash
mpirun -np <numProc> ./build/par
```

Replace `<numProc>` with the number of processes you want to use.

To run the sequential program:

```bash
./build/seq
```

Obs.: To perform fact-time processing, simulate for NUM_RECORDS values ​​up to 50.

### Understanding the Output

The program processes the input data and creates a CSV file `par.csv` with the following columns:

- `ID_a_m`: ID from record A
- `ID_b_M`: ID from record B
- `ID'`: Combined ID
- `a_m`: Value from record A
- `b_M`: Value from record B
- `f`: Final product

### Output Files and Their Interpretation

The output files generated by the program are as follows:

1. **`par.csv`**: This file contains the results of the parallel processing. Each row represents a record from the combined dataset `Cab` that meets the specified criteria. The columns are:
   - `ID_a_m`: The ID from record A after applying the minimum value filter.
   - `ID_b_M`: The ID from record B after applying the maximum value filter.
   - `ID'`: The combined ID created by the operator `∘`.
   - `a_m`: The minimum value from record A.
   - `b_M`: The maximum value from record B.
   - `f`: The final product calculated as `a_m * b_M * p`.

2. **`sorted_par.csv`**: This file contains the sorted results from `par.csv` based on the values in the `f` column in ascending order.

3. **`unique_sorted_par.csv`**: This file contains the unique sorted results from `sorted_par.csv`, ensuring that there are no duplicate rows.

These files are generated in the `output` directory and provide a detailed view of the processed data, allowing for further analysis and interpretation of the results.
